ajuste imagem do robô médico e texto da landing page

--- a/static/index.html
+++ b/static/index.html
@@ -42,7 +42,7 @@
   <div class="info">
     <h1>Seu Atendimento Digital com Inteligência</h1>
     <p>Agende consultas, tire dúvidas sobre especialidades e receba orientações de forma rápida e segura com o Kazap Chatboot.</p>
-    <img src="/img/robo.png" alt="Dr. Kazap robô médico" style="margin-top: 30px; width: 100%; max-width: 700px;">
+    <img src="/static/img/robo.png" alt="Dr. Kazap robô médico" style="margin-top: 30px; width: 100%; max-width: 700px;">
 </div>
   <div class="chat">
     <langflow-chat
