--- a/static/index.html
+++ b/static/index.html
@@ -46,9 +46,9 @@
 </div>
   <div class="chat">
     <langflow-chat
-      window_title="UPA ATENDIM"
-      flow_id="19921551-8a79-4f95-9660-4e60e77bbcf9"
-      host_url="https://hmontenegro-kazap-tech.hf.space">
+      window_title="UPA CHATBOOT"
+      flow_id="e9cf6dac-e75b-478a-9008-4df6ae3b84f6"
+      host_url="https://hmontenegro-health-boot.hf.space">
     </langflow-chat>
   </div>
 </body>
