--- a/static/index.html
+++ b/static/index.html
@@ -40,9 +40,9 @@
 </head>
 <body>
   <div class="info">
-    <h1>Seu Atendimento Digital com Inteligência</h1>
-    <p>Agende consultas, tire dúvidas sobre especialidades e receba orientações de forma rápida e segura com o Kazap Chatboot.</p>
-    <img src="/static/img/boot.png" alt="Dr. Kazap robô médico" style="margin-top: 30px; width: 100%; max-width: 700px;">
+    <h1>Atendimento Virtual da UPA</h1>
+    <p>Com o UPA Chatboot, você verifica sintomas, tira dúvidas sobre sua saúde e recebe orientações médicas com rapidez, segurança e acolhimento — tudo em um só lugar, sem complicações.</p>
+    <img src="/static/img/boot.png" alt="NINO SUS - ASSISTENTE VIRTUAL" style="margin-top: 30px; width: 100%; max-width: 700px;">
 </div>
   <div class="chat">
     <langflow-chat
