--- a/static/index.html
+++ b/static/index.html
@@ -2,7 +2,7 @@
 <html lang="pt">
 <head>
   <meta charset="UTF-8">
-  <title>Kazap Saúde Inteligente</title>
+  <title>NINO SUS - ATENDIMENTO VIRTUAL</title>
   <style>
     body {
       margin: 0;
