--- a/static/index.html
+++ b/static/index.html
@@ -41,7 +41,7 @@
 <body>
   <div class="info">
     <h1>Atendimento Virtual da UPA</h1>
-    <p>Com o UPA Chatboot, você verifica sintomas, tira dúvidas sobre sua saúde e recebe orientações médicas com rapidez, segurança e acolhimento — tudo em um só lugar, sem complicações.</p>
+    <p>Com o UPA Chatboot, você verifica sintomas, tira dúvidas sobre sua saúde e recebe orientações médicas com rapidez, segurança e acolhimento. Tudo em um só lugar, sem complicações.</p>
     <img src="/static/img/boot.png" alt="NINO SUS - ASSISTENTE VIRTUAL" style="margin-top: 30px; width: 100%; max-width: 700px;">
 </div>
   <div class="chat">
