Fase 01 - Projeto INSIGHTCARE - NINO SUS

--- a/static/index.html
+++ b/static/index.html
@@ -2,7 +2,7 @@
 <html lang="pt">
 <head>
   <meta charset="UTF-8">
-  <title>NINO SUS - ATENDIMENTO VIRTUAL</title>
+  <title>NINO SUS - INTELIGÊNCIA ARTIFICIAL BASEADO EM PRÁTICAS MÉDICAS</title>
   <style>
     body {
       margin: 0;
@@ -13,7 +13,7 @@
     }
     .info {
       flex: 1;
-      padding: 50px;
+      
     }
     .info h1 {
       font-size: 2.5rem;
@@ -40,16 +40,42 @@
 </head>
 <body>
   <div class="info">
-    <h1>Atendimento Virtual da UPA</h1>
-    <p>Com o UPA Chatboot, você verifica sintomas, tira dúvidas sobre sua saúde e recebe orientações médicas com rapidez, segurança e acolhimento. Tudo em um só lugar, sem complicações.</p>
-    <img src="/static/img/boot.png" alt="NINO SUS - ASSISTENTE VIRTUAL" style="margin-top: 30px; width: 100%; max-width: 700px;">
+    <img src="/static/img/boot.png" alt="NINO SUS - ASSISTENTE VIRTUAL" style="margin-top: 30px; width: 100%; max-width: 800px;">
+   <section style="max-width: 720px; margin: 0 auto; padding: 2rem; font-family: 'Poppins', sans-serif; color: #1a1a1a; line-height: 1.6;">
+  <h2 style="font-size: 1.8rem; font-weight: 700; color: #003366; margin-bottom: 1rem;">
+    🩺 Atendimento Virtual que Conecta a Ciência à Prática Médica
+  </h2>
+
+  <p style="font-size: 1rem; margin-bottom: 1rem;">
+    Com o <strong>Nino SUS</strong>, você acessa, em segundos, o que há de mais recente na 
+    <strong>medicina baseada em evidências</strong>.
+    A inteligência artificial analisa estudos, traduz resultados e entrega 
+    <strong>respostas práticas</strong> para o seu dia a dia clínico.
+  </p>
+
+  <p style="font-size: 1rem; margin-bottom: 1rem;">
+    Quer descobrir se há <strong>novos protocolos</strong>?<br>
+    Saber <strong>como um tratamento foi avaliado</strong> em pesquisas recentes?<br>
+    Ou entender <strong>o que a ciência revela</strong> sobre os casos que você vivencia todos os dias?
+  </p>
+
+  <p style="font-size: 1.1rem; font-weight: 600; color: #003366; margin-top: 1.5rem;">
+    💬 Fale com o <strong>Nino SUS</strong> e transforme dúvida em conhecimento.
+  </p>
+
+  <div style="margin-top: 1.8rem;">
+  </div>
+</section>
+    
 </div>
   <div class="chat">
-    <langflow-chat
-      window_title="UPA CHATBOOT"
-      flow_id="e9cf6dac-e75b-478a-9008-4df6ae3b84f6"
-      host_url="https://hmontenegro-health-boot.hf.space">
-    </langflow-chat>
+  <langflow-chat
+    window_title="INSIGHTCARE - NINO SUS"
+    flow_id="75dbfd20-b452-4eb7-b774-ee2c081e086c"
+    host_url="https://hmontenegro-health-boot.hf.space">
+</langflow-chat>
   </div>
 </body>
 </html>
+
+
