--- a/static/index.html
+++ b/static/index.html
@@ -70,7 +70,7 @@
 </div>
   <div class="chat">
   <langflow-chat
-    window_title="INSIGHTCARE - NINO SUS"
+    window_title="HEALTH_CHATBOOT"
     flow_id="75dbfd20-b452-4eb7-b774-ee2c081e086c"
     host_url="https://hmontenegro-health-boot.hf.space">
 </langflow-chat>
