--- a/static/index.html
+++ b/static/index.html
@@ -36,7 +36,6 @@
       height: 90%;
     }
   </style>
-  <script src="https://cdn.jsdelivr.net/gh/logspace-ai/langflow-embedded-chat@v1.0.7/dist/build/static/js/bundle.min.js"></script>
 </head>
 <body>
   <div class="info">
@@ -69,6 +68,9 @@
     
 </div>
   <div class="chat">
+ <script
+  src="https://cdn.jsdelivr.net/gh/logspace-ai/langflow-embedded-chat@v1.0.7/dist/build/static/js/bundle.min.js">
+</script>
   <langflow-chat
     window_title="HEALTH_CHATBOOT"
     flow_id="75dbfd20-b452-4eb7-b774-ee2c081e086c"
