Change title and references from 'NINO SUS' to 'HEALTH AI'

--- a/static/index.html
+++ b/static/index.html
@@ -2,7 +2,7 @@
 <html lang="pt">
 <head>
   <meta charset="UTF-8">
-  <title>NINO SUS - INTELIGÊNCIA ARTIFICIAL BASEADO EM PRÁTICAS MÉDICAS</title>
+  <title>HEALTH AI</title>
   <style>
     body {
       margin: 0;
@@ -39,14 +39,14 @@
 </head>
 <body>
   <div class="info">
-    <img src="/static/img/boot.png" alt="NINO SUS - ASSISTENTE VIRTUAL" style="margin-top: 30px; width: 100%; max-width: 800px;">
+    <img src="/static/img/boot.png" alt="HEALTH AI - ASSISTENTE VIRTUAL" style="margin-top: 30px; width: 100%; max-width: 800px;">
    <section style="max-width: 720px; margin: 0 auto; padding: 2rem; font-family: 'Poppins', sans-serif; color: #1a1a1a; line-height: 1.6;">
   <h2 style="font-size: 1.8rem; font-weight: 700; color: #003366; margin-bottom: 1rem;">
     🩺 Atendimento Virtual que Conecta a Ciência à Prática Médica
   </h2>
 
   <p style="font-size: 1rem; margin-bottom: 1rem;">
-    Com o <strong>Nino SUS</strong>, você acessa, em segundos, o que há de mais recente na 
+    Com o <strong>HEALTH AI</strong>, você acessa, em segundos, o que há de mais recente na 
     <strong>medicina baseada em evidências</strong>.
     A inteligência artificial analisa estudos, traduz resultados e entrega 
     <strong>respostas práticas</strong> para o seu dia a dia clínico.
@@ -59,7 +59,7 @@
   </p>
 
   <p style="font-size: 1.1rem; font-weight: 600; color: #003366; margin-top: 1.5rem;">
-    💬 Fale com o <strong>Nino SUS</strong> e transforme dúvida em conhecimento.
+    💬 Fale com o <strong>HEALTH AI</strong> e transforme dúvida em conhecimento.
   </p>
 
   <div style="margin-top: 1.8rem;">
@@ -68,7 +68,7 @@
     
 </div>
   <div class="chat">
- <script
+<script
   src="https://cdn.jsdelivr.net/gh/logspace-ai/langflow-embedded-chat@v1.0.7/dist/build/static/js/bundle.min.js">
 </script>
   <langflow-chat
