--- a/static/index.html
+++ b/static/index.html
@@ -72,8 +72,8 @@
   src="https://cdn.jsdelivr.net/gh/logspace-ai/langflow-embedded-chat@v1.0.7/dist/build/static/js/bundle.min.js">
 </script>
   <langflow-chat
-    window_title="HEALTH_CHATBOOT"
-    flow_id="75dbfd20-b452-4eb7-b774-ee2c081e086c"
+    window_title="NUVIA AI"
+    flow_id="e87c6bcc-2c52-421c-8f81-f544f54b4fe1"
     host_url="https://hmontenegro-health-boot.hf.space">
 </langflow-chat>
   </div>
